{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 29,
  "lineage": "9365fa3a-d072-6a5b-6ad6-46a2e3214fe9",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "private_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6eb0a23d-291e-41b7-93e2-b744159facd4/resourceGroups/demo_rge/providers/Microsoft.Network/networkInterfaces/Demo-Terraform-DB",
            "internal_domain_name_suffix": "ra5rma212zzeva0t4pvpqtlasb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Demo-Terraform-DBPrivate",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/6eb0a23d-291e-41b7-93e2-b744159facd4/resourceGroups/demo_rge/providers/Microsoft.Network/virtualNetworks/Demo-Terraform-VNet/subnets/Demo-Subnet-2"
              }
            ],
            "location": "westeurope",
            "name": "Demo-Terraform-DB",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "demo_rge",
            "tags": {
              "environment": "Production"
            }
          },
          "dependencies": [
            "azurerm_resource_group.demo_rge",
            "azurerm_subnet.demo_subnet_2",
            "azurerm_virtual_network.demo_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "public_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6eb0a23d-291e-41b7-93e2-b744159facd4/resourceGroups/demo_rge/providers/Microsoft.Network/networkInterfaces/Demo-Terraform-Web",
            "internal_domain_name_suffix": "ra5rma212zzeva0t4pvpqtlasb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Demo-Terraform-WebPrivate",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6eb0a23d-291e-41b7-93e2-b744159facd4/resourceGroups/demo_rge/providers/Microsoft.Network/publicIPAddresses/Demo-Terraform-PIP",
                "subnet_id": "/subscriptions/6eb0a23d-291e-41b7-93e2-b744159facd4/resourceGroups/demo_rge/providers/Microsoft.Network/virtualNetworks/Demo-Terraform-VNet/subnets/Demo-Subnet-1"
              }
            ],
            "location": "westeurope",
            "name": "Demo-Terraform-Web",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "demo_rge"
          },
          "dependencies": [
            "azurerm_public_ip.demo_pip",
            "azurerm_resource_group.demo_rge",
            "azurerm_subnet.demo_subnet_1",
            "azurerm_virtual_network.demo_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6eb0a23d-291e-41b7-93e2-b744159facd4/resourceGroups/demo_rge/providers/Microsoft.Network/networkSecurityGroups/Demo-Terraform-Web-NSG",
            "location": "westeurope",
            "name": "Demo-Terraform-Web-NSG",
            "resource_group_name": "demo_rge",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.demo_rge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "terraform_nsg_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6eb0a23d-291e-41b7-93e2-b744159facd4/resourceGroups/demo_rge/providers/Microsoft.Network/networkSecurityGroups/Demo-Terraform-DB-NSG",
            "location": "westeurope",
            "name": "Demo-Terraform-DB-NSG",
            "resource_group_name": "demo_rge",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowMySQL",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "Internet",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "BlockInternet",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.demo_rge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "demo_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/6eb0a23d-291e-41b7-93e2-b744159facd4/resourceGroups/demo_rge/providers/Microsoft.Network/publicIPAddresses/Demo-Terraform-PIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.80.142.36",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "Demo-Terraform-PIP",
            "resource_group_name": "demo_rge",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.demo_rge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "demo_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6eb0a23d-291e-41b7-93e2-b744159facd4/resourceGroups/demo_rge/providers/Microsoft.Network/virtualNetworks/Demo-Terraform-VNet/subnets/Demo-Subnet-1",
            "name": "Demo-Subnet-1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "demo_rge",
            "virtual_network_name": "Demo-Terraform-VNet"
          },
          "dependencies": [
            "azurerm_resource_group.demo_rge",
            "azurerm_virtual_network.demo_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "demo_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6eb0a23d-291e-41b7-93e2-b744159facd4/resourceGroups/demo_rge/providers/Microsoft.Network/virtualNetworks/Demo-Terraform-VNet/subnets/Demo-Subnet-2",
            "name": "Demo-Subnet-2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "demo_rge",
            "virtual_network_name": "Demo-Terraform-VNet"
          },
          "dependencies": [
            "azurerm_resource_group.demo_rge",
            "azurerm_virtual_network.demo_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "demo_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "03163f88-e69b-4a72-8353-f3eaf84d6091",
            "id": "/subscriptions/6eb0a23d-291e-41b7-93e2-b744159facd4/resourceGroups/demo_rge/providers/Microsoft.Network/virtualNetworks/Demo-Terraform-VNet",
            "location": "westeurope",
            "name": "Demo-Terraform-VNet",
            "resource_group_name": "demo_rge",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/6eb0a23d-291e-41b7-93e2-b744159facd4/resourceGroups/demo_rge/providers/Microsoft.Network/virtualNetworks/Demo-Terraform-VNet/subnets/Demo-Subnet-1",
                "name": "Demo-Subnet-1"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/6eb0a23d-291e-41b7-93e2-b744159facd4/resourceGroups/demo_rge/providers/Microsoft.Network/virtualNetworks/Demo-Terraform-VNet/subnets/Demo-Subnet-2",
                "name": "Demo-Subnet-2"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.demo_rge"
          ]
        }
      ]
    }
  ]
}